lib/hcl.h

/* ========================================================================== */

/**
 * The hcl_errnum_t type defines the error codes.
 */
enum hcl_errnum_t
{
	HCL_ENOERR,   /**< no error */
	HCL_EGENERIC, /**< generic error */
	HCL_ENOIMPL,  /**< not implemented */
	HCL_ESYSERR,  /**< subsystem error */
	HCL_EINTERN,  /**< internal error */

	HCL_ESYSMEM,  /**< insufficient system memory */
	HCL_EOOMEM,   /**< insufficient object memory */
	HCL_ETYPE,    /**< invalid class/type */
	HCL_EINVAL,   /**< invalid parameter or data */
	HCL_ENOENT,   /**< data not found */

	HCL_EEXIST,   /**< existing/duplicate data */
	HCL_EBUSY,
	HCL_EACCES,
	HCL_EPERM,
	HCL_ENOTDIR,

	HCL_EINTR,
	HCL_EPIPE,
	HCL_EAGAIN,
	HCL_EBADHND,
	HCL_EFRMFLOOD,  /**< too many frames */

	HCL_EMSGRCV,    /**< mesasge receiver error */
	HCL_EMSGSND,    /**< message sending error. even doesNotUnderstand: is not found */
	HCL_ENUMARGS,   /**< wrong number of arguments */
	HCL_ERANGE,     /**< range error. overflow and underflow */
	HCL_EBCFULL,    /**< byte-code full */

	HCL_EDFULL,     /**< dictionary full */
	HCL_EPFULL,     /**< processor full */
	HCL_EFINIS,     /**< unexpected end of data/input/stream/etc */
	HCL_EFLOOD,     /**< too many items/data */
	HCL_EDIVBY0,    /**< divide by zero */

	HCL_EIOERR,     /**< I/O error */
	HCL_EECERR,     /**< encoding conversion error */
	HCL_EBUFFULL,   /**< buffer full */
	HCL_ESYNERR,    /**< syntax error */
	HCL_ECALL,      /**< runtime error - cannot call */
	HCL_ECALLARG,   /**< runtime error - wrong number of arguments to call */
	HCL_ECALLRET,   /**< runtime error - wrong number of return variables to call */
	HCL_ESEMFLOOD,  /**< runtime error - too many semaphores */
	HCL_EEXCEPT,    /**< runtime error - exception not handled */
	HCL_ESTKOVRFLW, /**< runtime error - stack overflow */
	HCL_ESTKUNDFLW, /**< runtime error - stack overflow */
	HCL_EUNDEFVAR  /**< runtime error - undefined variable access */
};
typedef enum hcl_errnum_t hcl_errnum_t;
typedef struct hcl_cnode_t hcl_cnode_t;
typedef int (*hcl_on_cnode_t) (hcl_t* hcl, hcl_cnode_t* obj);
struct hcl_t
{
	hcl_oow_t    _instsize;
	hcl_mmgr_t*  _mmgr;
	hcl_cmgr_t*  _cmgr;

	hcl_errnum_t errnum;
	struct
	{
		union
		{
			hcl_ooch_t ooch[HCL_ERRMSG_CAPA];
			hcl_bch_t bch[HCL_ERRMSG_CAPA];
			hcl_uch_t uch[HCL_ERRMSG_CAPA];
		} tmpbuf;
	#if defined(HCL_OOCH_IS_BCH)
		hcl_uch_t  xerrmsg[HCL_ERRMSG_CAPA];
	#else
		hcl_bch_t  xerrmsg[HCL_ERRMSG_CAPA * 2];
	#endif
		hcl_ooch_t buf[HCL_ERRMSG_CAPA];
		hcl_oow_t len;

	} errmsg;
	int shuterr;

	struct
	{
		hcl_bitmask_t trait;
		hcl_bitmask_t log_mask;
		hcl_oow_t log_maxcapa;
		hcl_bch_t* log_target_b;
		hcl_uch_t* log_target_u;
		hcl_oow_t dfl_symtab_size;
		hcl_oow_t dfl_sysdic_size;
		hcl_oow_t dfl_procstk_size;
		void* mod_inctx;

		hcl_oocs_t mod[3];

	#if defined(HCL_BUILD_DEBUG)
		/* set automatically when trait is set */
		hcl_oow_t karatsuba_cutoff;
	#endif
	} option;

	hcl_vmprim_t vmprim;

	hcl_oow_t vm_checkbc_cb_count;
	hcl_cb_t* cblist;
	hcl_rbt_t modtab; /* primitive module table */

	struct
	{
		hcl_ooch_t* ptr;
		hcl_oow_t len;
		hcl_oow_t capa;
		hcl_bitmask_t last_mask;
		hcl_bitmask_t default_type_mask;
	} log;
	/* ========================= */

	hcl_heap_t* heap;

	/* ========================= */
	hcl_oop_t _undef; /* special internal value for uninitialized global variables */
	hcl_oop_t _nil;  /* pointer to the nil object */
	hcl_oop_t _true;
	hcl_oop_t _false;

	hcl_oop_t _and;    /* symbol */
	hcl_oop_t _break;  /* symbol */
	hcl_oop_t _catch;  /* symbol */
	hcl_oop_t _class;  /* symbol */
	hcl_oop_t _continue; /* symbol */
	hcl_oop_t _defclass; /* symbol */
	hcl_oop_t _defun;  /* symbol */
	hcl_oop_t _do;     /* symbol */
	hcl_oop_t _elif;   /* symbol */
	hcl_oop_t _else;   /* symbol */
	hcl_oop_t _fun;    /* symbol */
	hcl_oop_t _if;     /* symbol */
	hcl_oop_t _lambda; /* symbol */
	hcl_oop_t _or;     /* symbol */
	hcl_oop_t _plus;   /* symbol */
	hcl_oop_t _return; /* symbol */
	hcl_oop_t _return_from_home; /* symbol */
	hcl_oop_t _set;    /* symbol */
	hcl_oop_t _set_r;  /* symbol */
	hcl_oop_t _throw;  /* symbol */
	hcl_oop_t _try_;   /* symbol */  /* _try is special in MSVC. */
	hcl_oop_t _until;  /* symbol */
	hcl_oop_t _while;  /* symbol */

	hcl_oop_dic_t symtab; /* system-wide symbol table. */
	hcl_oop_dic_t sysdic; /* system dictionary. */
	hcl_oop_process_scheduler_t processor; /* instance of ProcessScheduler */
	hcl_oop_process_t nil_process; /* instance of Process */

	/* ============================================================================= */

	/* pending asynchronous semaphores */
	hcl_oop_semaphore_t* sem_list;
	hcl_oow_t sem_list_count;
	hcl_oow_t sem_list_capa;

	/* semaphores sorted according to time-out.
	 * organize entries using heap as the earliest entry
	 * needs to be checked first */
	hcl_oop_semaphore_t* sem_heap;
	hcl_oow_t sem_heap_count;
	hcl_oow_t sem_heap_capa;

	/* semaphores for I/O handling. plain array */
	/*hcl_oop_semaphore_t* sem_io;*/
	hcl_sem_tuple_t* sem_io_tuple;
	hcl_oow_t sem_io_tuple_count;
	hcl_oow_t sem_io_tuple_capa;

	hcl_oow_t sem_io_count;
	hcl_oow_t sem_io_wait_count; /* number of processes waiting on an IO semaphore */

	hcl_ooi_t* sem_io_map;
	hcl_oow_t sem_io_map_capa;
	/* ============================================================================= */

	hcl_oop_t* proc_map;
	hcl_oow_t proc_map_capa;
	hcl_oow_t proc_map_used;
	hcl_ooi_t proc_map_free_first;
	hcl_ooi_t proc_map_free_last;

	/* 2 tag bits(lo) + 2 extended tag bits(hi). not all slots are used
	 * because the 2 high extended bits are used only if the low tag bits
	 * are 3 */
	int tagged_brands[16];

	hcl_oop_t* volat_stack[256]; /* stack for temporaries */
	hcl_oow_t volat_count;

	/* == EXECUTION REGISTERS == */
	hcl_oop_function_t initial_function;
	hcl_oop_context_t initial_context; /* fake initial context */
	hcl_oop_context_t active_context;
	hcl_oop_function_t active_function;
	hcl_oob_t* active_code;
	hcl_ooi_t sp;
	hcl_ooi_t ip;
	int no_proc_switch; /* process switching disabled */
	int proc_switched; /* TODO: this is temporary. implement something else to skip immediate context switching */
	int switch_proc;
	int abort_req;
	hcl_ntime_t exec_start_time;
	hcl_ntime_t exec_end_time;
	hcl_oop_t last_retv;
	/* == END EXECUTION REGISTERS == */

	/* == BIGINT CONVERSION == */
	struct
	{
		int safe_ndigits;
		hcl_oow_t multiplier;
	} bigint[37];

	struct
	{
		struct
		{
			hcl_ooch_t* ptr;
			hcl_oow_t capa;
			hcl_oow_t len;
		} xbuf;
		struct
		{
			hcl_liw_t* ptr;
			hcl_oow_t capa;
		} t;
	} inttostr;
	/* == END BIGINT CONVERSION == */

	struct
	{
		struct
		{
			hcl_ooch_t* ptr;
			hcl_oow_t capa;
			hcl_oow_t len;
		} xbuf; /* buffer to support sprintf */
	} sprintf;


	hcl_code_t code;

	/* == PRINTER to udo stream == */
	struct
	{
		struct
		{
			void*        ptr;
			hcl_oow_t    capa;
			hcl_oow_t    size;
		} s;
		hcl_oop_t e; /* top entry being printed */
	} p;
	/* == PRINTER to udo stream == */

	struct
	{
		hcl_gchdr_t* b; /* object blocks allocated */
		struct
		{
			hcl_gchdr_t* curr;
			hcl_gchdr_t* prev;
		} ls;
		hcl_oow_t bsz; /* total size of object blocks allocated */
		hcl_oow_t threshold;
		int lazy_sweep;

		struct
		{
			hcl_oop_t* ptr;
			hcl_oow_t capa;
			hcl_oow_t len;
			hcl_oow_t max;
		} stack;

		struct
		{
			hcl_ntime_t alloc;
			hcl_ntime_t mark;
			hcl_ntime_t sweep;
		} stat;
	} gci;

	struct
	{
		/* input handler */
		hcl_io_impl_t udi_rdr;
		hcl_io_udiarg_t udi_arg;

		/* output handler */
		hcl_io_impl_t udo_wrtr;
		hcl_io_udoarg_t udo_arg;
	} io;

#if defined(HCL_INCLUDE_COMPILER)
	hcl_compiler_t* c;
#endif
};
HCL_EXPORT hcl_t* hcl_openstd (
	hcl_oow_t           xtnsize,
	hcl_errnum_t*       errnum
);
HCL_EXPORT void hcl_close (
	hcl_t* vm
);
HCL_EXPORT const hcl_bch_t* hcl_geterrbmsg (
	hcl_t* hio
);
HCL_EXPORT const hcl_bch_t* hcl_errnum_to_errbcstr (
	hcl_errnum_t errnum,
	hcl_bch_t*   buf,
	hcl_oow_t    len
);
/**
 * The hcl_ignite() function creates key initial objects.
 */
HCL_EXPORT int hcl_ignite (
	hcl_t*      hcl,
	hcl_oow_t   heapsize
);
HCL_EXPORT int hcl_addbuiltinprims (
	hcl_t*      hcl
);
/**
 * The hcl_execute() function executes an activated context.
 */
HCL_EXPORT hcl_oop_t hcl_execute (
	hcl_t* hcl
);
HCL_EXPORT void hcl_abort (
	hcl_t* hcl
);
HCL_EXPORT void hcl_detachccio (
	hcl_t*        hcl
);
HCL_EXPORT void hcl_detachudio (
	hcl_t*        hcl
);
HCL_EXPORT int hcl_attachcciostdwithbcstr (
	hcl_t*           hcl,
	const hcl_bch_t* cci_file
);
HCL_EXPORT int hcl_attachudiostdwithbcstr (
	hcl_t*           hcl,
	const hcl_bch_t* udi_file,
	const hcl_bch_t* udo_file
);
HCL_EXPORT int hcl_beginfeed (
	hcl_t*            hcl,
	hcl_on_cnode_t    on_cnode
);
HCL_EXPORT int hcl_feeduchars (
	hcl_t*           hcl,
	const hcl_uch_t* data,
	hcl_oow_t        len
);
HCL_EXPORT int hcl_feedbchars (
	hcl_t*           hcl,
	const hcl_bch_t* data,
	hcl_oow_t        len
);
HCL_EXPORT int hcl_endfeed (
	hcl_t*            hcl
);
HCL_EXPORT int hcl_compile (
	hcl_t*       hcl,
	hcl_cnode_t* obj,
	int          flags
);